@@ -1,0 +1,4 @@
+There are many samples ported from Anti-Grain Geometry (AGG:
+http://www.antigrain.com/)
+
+They use Ruby/GTK+ for GUI.
